# home-automation-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
dummy_nest_api/: README.md  deploy.sh  main.py  pyproject.toml  run_local.sh  run_with_uv.sh
scripts/: nest_oauth.py
src/: config.py  server.py
src/services/: google_sdm_client.py  nest_client.py  weather_client.py
src/tools/: thermostat.py  weather.py
