[project]
name = "dummy-nest-api"
version = "0.1.0"
description = "Mock NEST API for testing"
requires-python = ">=3.11"

dependencies = [
    "functions-framework>=3.5.0",
    "pydantic>=2.0.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]
